Release v1.0.0: Final Diagnostic Build & Universal Scan Support